--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px;
     color: #ffffff;
@@ -41,6 +40,7 @@ a{
     font-family: 'Roboto';
 }
 .phone-number{
+    font-family: 'Roboto Flex', sans-serif;
     padding: 12px 31px;
     background: #886239;
     border-radius: 22px;
